--- a/Webpack/LearnWebpack/code-splitting-my/package.json
+++ b/Webpack/LearnWebpack/code-splitting-my/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "getting-started",
+  "name": "code-splitting-my",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build":"webpack"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^5.2.6",
+    "mini-css-extract-plugin": "^1.6.0",
+    "style-loader": "^2.0.0",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0"
-  },
-  "dependencies": {
-    "lodash": "^4.17.21"
   }
 }
