--- a/Webpack/LearnWebpack/getting-started-complete/package.json
+++ b/Webpack/LearnWebpack/getting-started-complete/package.json
@@ -7,13 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^5.38.1",
-    "webpack-cli": "^4.7.0"
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.15"
   }
 }
