--- a/vue-end-retry/vue-end-retry/package.json
+++ b/vue-end-retry/vue-end-retry/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-   "lint": "eslint --ext .js,.vue src",	  
-    "fix": "eslint --fix --ext .js,.vue src" 	
+    "lint": "eslint --ext .js,.vue src",
+    "fix": "eslint --fix --ext .js,.vue src"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
