--- a/vue-advanced-retry/package.json
+++ b/vue-advanced-retry/package.json
@@ -1,33 +1,28 @@
 {
-  "name": "vue-end-retry",
+  "name": "vue-advanced-retry",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "lint": "eslint --ext .js,.vue src",
-    "fix": "eslint --fix --ext .js,.vue src",
-    "test": "vue-cli-service test:unit --watchAll"
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-router": "^3.5.2",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "@vue/test-utils": "^1.2.1",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^27.0.6",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-vue": "^6.2.2",
-    "jest": "^27.0.6",
-    "prettier": "^2.3.2",
-    "vue-jest": "^3.0.7",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
